--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.3",
     "nodemon": "^3.1.0",
-    "zod": "^3.23.5"
+    "zod": "^3.23.5",
+    "zod-validation-error": "^3.2.0"
   }
 }
